# phi-deidentification

./: .env.example  .gitignore  README.md  TASK_10_VALIDATION_REPORT.md  clean_output.sh  evaluate.py  main.py  manual_validation.py  phi-identifiers.md  redact_pii.py  redaction_formats.py  requirements-dev.txt  requirements-lambda.txt  requirements.txt  worker.py
agent/: __init__.py  agent.py  models.py  prompt.py
backend/: .env.example  pyproject.toml  run_tests.sh
backend/agent/: pyproject.toml
backend/agent/src/agent/: __init__.py  agent.py  models.py  prompt.py
backend/agent/tests/: test_models.py
backend/cli/: pyproject.toml
backend/cli/src/cli/: generate_notes.py
backend/deidentification/: pyproject.toml
backend/deidentification/src/deidentification/: __init__.py  constants.py  deidentification.py
backend/deidentification/src/deidentification/redaction/: __init__.py  redact_pii.py  redaction_formats.py
backend/deidentification/src/deidentification/redaction/formats/: default.json
backend/deidentification/tests/: test_redact_pii.py
backend/lambda/api/: api_logger.py  batch_stats.py  handler.py  pyproject.toml  route_handlers.py  storage.py
backend/lambda/api/tests/: test_batch_stats.py
backend/lambda/ingestion/: batch_stats.py  handler.py  pyproject.toml
backend/lambda/ingestion/tests/: test_batch_stats.py
backend/lambda/worker/: batch_stats.py  handler.py  pyproject.toml
backend/lambda/worker/tests/: test_batch_stats.py
backend/synthetic-data-generator/: README.md  pyproject.toml  pytest.ini  requirements.txt
backend/synthetic-data-generator/scripts/: evaluate.py  generate_notes.py
backend/synthetic-data-generator/src/: evaluator.py  s3_client.py
backend/synthetic-data-generator/src/prompts/: radiology_report.txt  telehealth_consult.txt  template_mode_prompt.md
backend/synthetic-data-generator/src/synthetic_data_generator/: __init__.py  async_note_generator.py  bedrock_client.py  config.py  evaluator.py  note_generator.py  s3_client.py  utils.py
backend/synthetic-data-generator/src/synthetic_data_generator/models/: note_models.py  utils.py
backend/synthetic-data-generator/src/synthetic_data_generator/prompts/: __init__.py  prompts.py
backend/synthetic-data-generator/tests/: test_async_bedrock_client.py  test_config.py  test_fhir_parser.py  test_integration.py  test_phi_injector.py
cdk/: .env.example  .gitignore  app.py  cdk.json  package-lock.json  package.json  pii_deidentification_stack.py  tsconfig.json
cdk/lib/: phi-deidentification-stack.ts  pii-deidentification-stack.ts
dashboard/: README.md
dashboard/backend/: main.py  models.py  requirements.txt
dashboard/frontend/: index.html  package-lock.json  package.json  tsconfig.json
dashboard/frontend/src/: App.css  (+3 more)
docs/: index.html  logfire-token-analysis.md
docs/assets/: index-Bwv-Uo-F.js  index-CMoALMLR.js  index-CNhDcszA.js  index-CkCG6LG6.css  index-DI-2KMk4.css  index-DmyJtcKU.css
frontend/: .gitignore  deploy-frontend.sh  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
info-site/: index.html  package-lock.json  package.json  vite.config.ts
info-site/src/: main.ts  style.css
lambda/: requirements-lambda.txt
lambda/api/: api_handler.py  handlers.py  requirements.txt  storage.py
lambda/worker/: worker.py
redaction_formats/: sample_id_format.json
scripts/: analyze_bundle.py  analyze_logfire.py  create_batch.sh  generate_bulk.py  generate_notes.py
scripts/analyze_fhir/: get_unique_resource_types.py
src/: __init__.py  config.py  fhir_parser.py  local_file_client.py  note_generator.py  phi_generator.py  phi_injector.py  utils.py
src/prompts/: discharge_summary.txt  emergency_dept.txt  progress_note.txt
tests/: conftest.py  test_config.py  test_fhir_parser.py  test_integration.py  test_note_generator.py  test_phi_injector.py
tooling/: .gitignore  README.md  pyproject.toml
tooling/cli/: pyproject.toml
tooling/cli/src/cli/: analyze_bundle.py  analyze_logfire.py  evaluate.py  generate_notes.py  get_unique_resource_types.py  run_deidentification.py
tooling/dashboard/: README.md
tooling/dashboard/api/: pyproject.toml
tooling/dashboard/api/src/api/: main.py  models.py
tooling/dashboard/frontend/: index.html
tooling/dashboard/frontend/src/api/: client.ts  types.ts
tooling/dashboard/frontend/src/components/: MetricsOverview.tsx  NoteViewer.css  NoteViewer.tsx  Sidebar.css  Sidebar.tsx  ThemeToggle.css  ThemeToggle.tsx  ThreePanelDiff.tsx
tooling/dashboard/frontend/src/contexts/: ThemeContext.tsx
tooling/dashboard/frontend/src/pages/: HomePage.tsx
tooling/synthetic-data-generator/: PHI_CONTEXT_DETAILS.md  README.md
tooling/synthetic-data-generator/src/synthetic_data_generator/: async_bedrock_client.py  bedrock_client.py  config.py  fhir_parser.py  local_file_client.py  note_generator.py  phi_generator.py  phi_injector.py  s3_client.py  utils.py
tooling/synthetic-data-generator/src/synthetic_data_generator/models/: eval_models.py  fhir_models.py  note_models.py  utils.py
tooling/synthetic-data-generator/src/synthetic_data_generator/prompts/: prompts.py
tooling/synthetic-data-generator/tests/: conftest.py  test_async_note_generator.py  test_bedrock_client.py  test_config.py  test_fhir_parser.py  test_note_generator.py  test_phi_injector.py
tooling/synthetic-data-generator/tests/fixtures/: comprehensive_fhir_bundle.json
(+30 files in other folders)
