[project]
name = "backend"
version = "0.1.0"
description = "Core backend logic for PII/PHI de-identification"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-ai-slim[bedrock,logfire]>=1.65.0",
]

[dependency-groups]
dev = [
    "boto3>=1.42.46",
    "boto3-stubs>=1.42.46",
    "botocore>=1.42.41",
    "botocore-stubs>=1.42.41",
    "python-dotenv>=1.2.1",
]

[tool.uv.workspace]
members = [
    "cli",
    "agent",
    "deidentification",
    "synthetic-data-generator",
    "lambda/api",
    "lambda/ingestion",
    "lambda/worker",
]

[tool.setuptools]
packages = []
