[project]
name = "agent"
version = "0.1.0"
description = "Agent for de-identification"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-ai-slim[bedrock,logfire]>=1.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[dependency-groups]
dev = [
    "boto3>=1.42.46",
    "boto3-stubs>=1.42.46",
    "botocore>=1.42.41",
    "botocore-stubs>=1.42.41",
    "python-dotenv>=1.2.1",
]
