[project]
name = "deidentification"
version = "0.1.0"
description = "Core de-identifcation logic"
requires-python = ">=3.12"
dependencies = [
    "agent",
]

[tool.uv.sources]
agent = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deidentification"]