[project]
name = "synthetic-data-generator"
version = "0.1.0"
description = "Synthetic Data Generator for PII Deidentification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.46",
    "botocore>=1.42.41",
    "faker>=40.4.0",
    "jmespath>=1.1.0",
    "nicknames>=1.0.0",
    "phonenumbers>=9.0.24",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.42.46",
    "botocore-stubs>=1.42.41",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synthetic_data_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that may take longer"
]
