[project]
name = "cli"
version = "0.1.0"
description = "CLI for PII Deidentification"
requires-python = ">=3.12"
dependencies = [
    "agent",
    "deidentification",
    "synthetic-data-generator",
]

[tool.uv.sources]
synthetic-data-generator = { workspace = true }

[project.scripts]
generate-notes = "cli.generate_notes:main"
analyze-fhir-bundle = "cli.analyze_bundle:main"
get-unique-resource-types = "cli.get_unique_resource_types:main"

[build-system]                                                                                                                  
requires = ["hatchling"]                                                                                                        
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]